deployment/common-modules/compute-multi-instance-public-subnet/main.tf
data "aws_ami" "amazon_linux" {
  most_recent = true
  owners      = ["amazon"]

  filter {
    name   = "name"
    values = ["al2023-ami-2023.*-kernel-6.1-x86_64"]
  }
}

data "http" "my_ip" {
  url = "https://checkip.amazonaws.com"
}
resource "aws_security_group" "ec2_sg" {
  name_prefix = "${var.environment}-ec2-sg"
  vpc_id      = var.vpc_id

  ingress {
    from_port       = 4000
    to_port         = 4000
    protocol        = "tcp"
    security_groups = [var.alb_security_group_id]
  }

  ingress {
  from_port   = 22
  to_port     = 22
  protocol    = "tcp"
  # chomp() removes the invisible newline character returned by the URL
  cidr_blocks = ["${chomp(data.http.my_ip.response_body)}/32"]
}

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "${var.environment}-ec2-sg"
  }
}

resource "aws_instance" "app_servers" {
  count                  = length(var.public_subnet_ids)
  ami                    = data.aws_ami.amazon_linux.id
  instance_type          = var.instance_type
  key_name               = var.key_name
  subnet_id              = var.public_subnet_ids[count.index]
  vpc_security_group_ids = [aws_security_group.ec2_sg.id]
  user_data              = file("${path.module}/user_data.sh")

  tags = {
    Name        = "${var.environment}-app-server-${count.index + 1}"
    Environment = var.environment
  }
}
